tests/codegen/errors/codegen/precise-fields/atom.codegen.diagnostic.codegen.branch.missing.layout.field.connected/codegen-branch-missing-layout-field-connected.mon
;; TEST-ID: tests.codegen.codegen-error.codegen-branch-missing-layout-field-connected
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: codegen-errors/precise-fields
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: field
;; TEST-ATOM: atom.codegen.diagnostic.codegen.branch.missing.layout.field.connected
;; TEST-CODEGEN-ATOM: atom.codegen.diagnostic.codegen.branch.missing.layout.field.connected
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: field
;; TEST-READER-PATH: reader.c:39 codegen.dot.missing-field
;; TEST-CODEGEN-PATH: diagnostic.codegen.dot.missing-field
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: codegen
;; TEST-COVERAGE: reader.c:39 field
;; TEST-USES-ATOM: atom.codegen.diagnostic.codegen.branch.missing.layout.field.connected
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.codegen.error.precise
;; TEST-DEPENDS-ON: atom.reader.postfix.dot
;; TEST-DEPENDS-ON: atom.codegen.layout.dot
;; TEST-REFINES: atom.codegen.diagnostic.layout-missing-field
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/precise-fields/atom.codegen.diagnostic.codegen.branch.missing.layout.field.connected
;; TEST-MENU-PATH: codegen/errors/codegen/precise-fields/atom.codegen.diagnostic.codegen.branch.missing.layout.field.connected
;; TEST-ATOM-LEAF: atom.codegen.diagnostic.codegen.branch.missing.layout.field.connected
;; TEST-CLI-TARGET: codegen errors codegen precise-fields

(module Main)
(layout Point [x :: Int])
(define p (Point 1))
(show p.y)
